<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".InformacionProyectoFragment" android:background="@color/colorPaleta5">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        <TextView
                android:text="@string/txt_tv_id_proyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textColor="@color/colorPaleta4"/>
        <TextView
                android:text="@string/txt_tv_id_numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvIdProyecto"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:textColor="@color/colorPaleta4"/>
        <TextView
                android:text="@string/txt_tv_plataforma_proyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView10"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView23" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="100dp" android:textColor="@color/colorPaleta4"/>
        <TextView
                android:text="$"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                android:layout_marginTop="72dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView10"
                android:layout_marginStart="132dp" android:textColor="@color/colorPaleta2"/>
        <TextView
                android:text="@string/txt_tv_pago_proyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvPagoPorBug"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp" android:layout_marginTop="72dp"
                app:layout_constraintTop_toTopOf="parent" android:textColor="@color/colorPaleta2"/>
        <ImageView
                android:src="@drawable/linea_divisora"
                android:layout_width="405dp"
                android:layout_height="15dp"
                android:id="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"/>
        <TextView
                android:text="@string/txt_tv_dispositivos_solicitados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView13"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textColor="@color/colorPaleta4"/>
        <TextView
                android:text="@string/txt_tv_nombre_dispositivo_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView14" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="168dp" android:textColor="@color/colorPaleta3"/>
        <TextView
                android:text="@string/txt_tv_nombre_dispositivo_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="168dp" android:textColor="@color/colorPaleta3"/>
        <TextView
                android:text="@string/txt_tv_nombre_dispositivo_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="168dp" android:textColor="@color/colorPaleta3"/>
        <ImageView
                android:src="@drawable/linea_divisora"
                android:layout_width="409dp"
                android:layout_height="20dp"
                android:id="@+id/imageView6" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.414"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView16"/>
        <TextView
                android:text="@string/txt_registro_sistema_operativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView17" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" android:textColor="@color/colorPaleta4"/>
        <TextView
                android:text="@string/txt_tv_version_sistemaoperativo_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18" app:layout_constraintStart_toEndOf="@+id/textView17"
                android:layout_marginStart="8dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" android:textColor="@color/colorPaleta3"/>
        <TextView
                android:text="@string/txt_tv_version_sistemaoperativo_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView18" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="128dp" android:textColor="@color/colorPaleta3"/>
        <TextView
                android:text="@string/txt_tv_version_sistemaoperativo_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView19" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="128dp" android:textColor="@color/colorPaleta3"/>
        <ImageView
                android:src="@drawable/linea_divisora"
                android:layout_width="398dp"
                android:layout_height="17dp"
                android:id="@+id/imageView7" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView20"/>
        <TextView
                android:text="@string/txt_tv_caracteristicas_a_probar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView21" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textColor="@color/colorPaleta4"/>
        <TextView
                android:text="@string/txt_tv_informacion_caracteristicas_a_probar"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                app:layout_constraintTop_toBottomOf="@+id/textView21" android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:textColor="@color/colorPaleta3"/>
        <ImageView
                android:src="@drawable/linea_divisora"
                android:layout_width="404dp"
                android:layout_height="14dp"
                android:id="@+id/imageView9" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.444"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView22"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAceptarProyecto"
                android:background="@drawable/boton_aceptar_proyecto_texto"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="60dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnRechazarProyecto"
                android:background="@drawable/boton_rechazarproyecto_texto"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="52dp"/>
        <TextView
                android:text="@string/txt_tv_tipo_proyecto"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:id="@+id/textView23"
                android:textColor="@color/colorPaleta3" tools:layout_editor_absoluteY="35dp"
                tools:layout_editor_absoluteX="100dp"/>

    </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>