<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistroDispositivo" android:background="@color/colorPaleta5">

    <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:id="@+id/tilRegistroNombreDispositivo">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_registro_dispositivo" android:id="@+id/txtRegistroNombreDispositivo"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tilRegistroNombreDispositivo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:id="@+id/tilRegistroCategoria">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_registro_categoria" android:id="@+id/txtRegistroCategoria"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tilRegistroCategoria"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:id="@+id/tilRegistroSistemaOperativo">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_registro_sistema_operativo" android:id="@+id/txtRegistroSistemaOperativo"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tilRegistroSistemaOperativo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:id="@+id/tilRegistroVersionSistemaOperativo"
            android:backgroundTint="@color/colorPaleta1">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_registro_version_sistema_operativo"
                android:id="@+id/txtRegistroVersionSistemaOperativo"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/btn_registrar_dispotivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistrarDispositivo" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tilRegistroVersionSistemaOperativo"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textColor="@color/colorPaleta5" android:background="@drawable/boton_registrodispositivo_fondo"/>
    <ImageView
            android:layout_width="829dp"
            android:layout_height="456dp" app:srcCompat="@drawable/fondo_abajo"
            android:id="@+id/imageView8" android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistrarDispositivo"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.602"
            app:layout_constraintVertical_bias="0.029"/>
</android.support.constraint.ConstraintLayout>