<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".RegistroBugFragmento" android:background="@color/colorPaleta5">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/txt_tv_nombre_bug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="12dp" android:textColor="@color/colorPaleta4"/>
            <EditText
                    android:layout_width="362dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etDescripcionBug" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="@color/colorPaleta3" android:backgroundTint="@color/colorPaleta2"/>
            <TextView
                    android:text="@string/txt_tv_descripcion_bug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/etNombreBug" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textColor="@color/colorPaleta4"/>
            <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etNombreBug"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPaleta3"
                    android:backgroundTint="@color/colorPaleta1"/>
            <TextView
                    android:text="@string/txt_tv_detalles_reproduccion_bug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/etDescripcionBug"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textColor="@color/colorPaleta4"/>
            <EditText
                    android:layout_width="363dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etDetallesReproduccionBug" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="@color/colorPaleta3" android:backgroundTint="@color/colorPaleta2"/>
            <TextView
                    android:text="@string/txt_tv_severidad_bug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/etDetallesReproduccionBug"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textColor="@color/colorPaleta4"/>
            <EditText
                    android:layout_width="364dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etSeveridadBug" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="@color/colorPaleta3" android:backgroundTint="@color/colorPaleta2"/>
            <TextView
                    android:text="@string/txt_tv_adjuntos_bug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/etSeveridadBug"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textColor="@color/colorPaleta4"/>
            <EditText
                    android:layout_width="364dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etDireccionAdjuntoBug" android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    android:textColor="@color/colorPaleta3" android:backgroundTint="@color/colorPaleta2"/>
            <Button
                    android:layout_width="53dp"
                    android:layout_height="40dp"
                    android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="12dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/boton_agregar_registro"
                    app:layout_constraintTop_toTopOf="@+id/etDireccionAdjuntoBug"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@drawable/boton_enviarbug_contexto"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etDireccionAdjuntoBug"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>